--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -33,3 +33,23 @@ body {
 .ui.rating i {
   outline: none;
 }
+
+.ui.menu .cart:hover {
+  cursor: pointer;
+  background-color: #f2f2f286;
+}
+
+.ui.menu .cart:active {
+  background-color: #f2f2f2;
+}
+
+.cart_icon {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 960px) {
+  html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+  }
+}
