--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,6 @@
 body {
   margin-top: 20px;
 }
-
 .menu {
   margin-bottom: 20px;
 }
@@ -34,17 +33,32 @@ body {
   outline: none;
 }
 
-.ui.menu .cart:hover {
-  cursor: pointer;
-  background-color: #f2f2f286;
+.ui.cart_button,
+.ui.button:hover,
+.ui.button:active,
+.ui.menu:not(.vertical) .item > .button {
+  background: transparent;
 }
 
-.ui.menu .cart:active {
-  background-color: #f2f2f2;
+.ui.positive.button:hover,
+.ui.positive.buttons .button:hover {
+  background-color: #17a037;
 }
 
-.cart_icon {
-  margin-left: 10px;
+.ui.positive.button:active,
+.ui.positive.buttons .button:active {
+  background-color: #169132;
+}
+
+.ui.popup .cart_item {
+  display: flex;
+  padding: 5px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.book_text {
+  width: 70%;
 }
 
 @media screen and (min-width: 960px) {
